# Viincci-RAG

./: .gitignore  COMPLETION_REPORT.md  Example.ipynb  Fix.txt  MANIFEST.in  README.md  READY_FOR_CLEANUP.md  __init__.py  main.py  pyproject.toml  requirements.txt  research_cli.py  setup_py.py  test_v4.py
.github/workflows/: Serp-api.yml  Test.yml  main-pip-test.yml  remote-test.yml  test-article-generation.yml
V4/: ApiMonitor.py  ArtGenSys.py  ConfigManager.py  FloraDatabase.py  FloraWikipediaScraper.py  RagSys.py  Spider.py  UniversalArticleGenerator.py  __init__.py  setup_v4.py  utils.py
V4/config/: domains.json  universal_article_config.json
docs/: BACKWARD_COMPATIBILITY_SHIMS.md  CLEANUP_CHECKLIST.md  DOCS.md  MIGRATION.md  RESTRUCTURING_COMPLETE.md  RESTRUCTURING_SUMMARY.md  Restructuring Guide.md  package_structure.md
tests/: __init__.py  test_config.py  test_integration.py  test_rag.py  test_spider.py
tools/: generate_da.py
viincci_rag/: __init__.py
viincci_rag/core/: __init__.py  api_monitor.py  article_generator.py  config.py  rag_system.py  spider.py
viincci_rag/database/: __init__.py
viincci_rag/examples/: test_examples.ipynb
viincci_rag/templates/: __init__.py
viincci_rag/utils/: __init__.py
