[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "viincci-rag"
version = "1.0.0"
description = "Universal multi-domain research system with RAG (Retrieval-Augmented Generation) capabilities"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Viincci Team", email = "contact@viincci.dev"}
]
maintainers = [
    {name = "Viincci Team", email = "contact@viincci.dev"}
]
keywords = [
    "research", 
    "rag", 
    "nlp", 
    "ai", 
    "machine-learning",
    "information-retrieval",
    "multi-domain"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]

dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "pandas>=2.0.0",
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.4",
    "PyPDF2>=3.0.0",
    "wikipedia-api>=0.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "flake8>=6.1.0",
    "black>=23.0.0",
]
cuda = [
    "torch>=2.0.0",  # With CUDA support
]
all = [
    "accelerate>=0.24.0",
    "bitsandbytes>=0.41.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/viincci-rag"
Documentation = "https://github.com/yourusername/viincci-rag/wiki"
Repository = "https://github.com/yourusername/viincci-rag"
"Bug Tracker" = "https://github.com/yourusername/viincci-rag/issues"

[project.scripts]
viincci-research = "V4.cli:main"
viincci-main = "V4.main:main"
viincci-test = "V4.test_v4:main"

[tool.setuptools]
packages = ["V4", "viincci_rag"]
py-modules = []

[tool.setuptools.package-data]
V4 = ["config/*.json", "config/.gitkeep", "db/.gitkeep"]
viincci_rag = ["config/*.json", "config/.gitkeep"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=V4 --cov=viincci_rag --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["V4", "viincci_rag"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true